--- a/src/stylesheets/search/_datastore-list.scss
+++ b/src/stylesheets/search/_datastore-list.scss
@@ -2,6 +2,7 @@
   background: $grey-6;
   border-bottom: solid 2px $grey-5;
   text-align: center;
+  margin-bottom: 0.75rem;
 }
 
 .datastore-scroll-container {
